[package]
name = "advent_of_code_2022"
version = "0.15.1"
edition = "2021"

[dependencies]
clap = { version = "4.0.29", features = ["cargo"] }
colored = "2.0.0"
itertools = "0.10.5"
paste = "1.0.9"
pathfinding = "4.0.0"
reqwest = { version = "0.11.13", features = ["blocking"] }

[profile.release]
debug = true
